--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
   <link rel="stylesheet" href="css/style.css">
+  <!-- favicon = ikon i faneblad / browser -->
+	<link rel="icon" type="image/x-icon" href="#" />
 </head>
-<body>
 
+<body>
+  <div id="wrap">
+
+    <header>
+      <img src="images/header.png" alt="#" style="width: 100%; height: auto;">
+      <h2> Vi tilbyder et stort udvalg af forskellige behandlinger </h2>
+      <button class="btn1">Book tid</button>
+      <h1> Velkommen til Beauty Star! </h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+    </header>
+
+    <main>
+    </main>
+
+    <footer>
+        Copyright 2021. Alle rettigheder forbeholdes.
+    </footer>
+  </div><!-- /wrap -->
 </body>
 </html>
