--- a/index.html
+++ b/index.html
@@ -19,12 +19,26 @@
     <header>
       <img src="images/header.png" alt="#" style="width: 100%; height: auto;">
       <h2> Vi tilbyder et stort udvalg af forskellige behandlinger </h2>
-      <button class="btn1">Book tid</button>
+      <button class="btn">Book tid</button>
       <h1> Velkommen til Beauty Star! </h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
     </header>
 
     <main>
+      <section id="kategorier">
+        <article>
+          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
+          <button class="btn1">Behandlinger</button>
+        </article>
+        <article>
+          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
+          <button class="btn1">Academy</button>
+        </article>
+        <article>
+          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
+          <button class="btn1">Om os</button>
+        </article>
+      </section>
     </main>
 
     <footer>
