--- a/index.html
+++ b/index.html
@@ -21,22 +21,40 @@
       <h2> Vi tilbyder et stort udvalg af forskellige behandlinger </h2>
       <button class="btn">Book tid</button>
       <h1> Velkommen til Beauty Star! </h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+      <p>Hos Beauty Star skøndhedsklinik kan du som kunde, altid nyde en rolig stemning, væk fra dagligdagens larm, hvor du er i centrum.</p>
     </header>
 
     <main>
       <section id="kategorier">
         <article>
           <a href="#"><img src="images/behandlinger.png" alt="#"></a>
-          <button class="btn1">Behandlinger</button>
+          <div class="boks1">
+            <a href="#"><div class="bokstekst"></a>
+              <h4>Se vores</h4>
+              <hr class="solid">
+              <h3>Behandlinger</h3>
+            </div>
+          </div>
+        </article>
+        <article>
+          <a href="#"><img src="images/academy.png" alt="#"></a>
+          <div class="boks2">
+            <div class="bokstekst">
+              <h4>Se vores</h4>
+              <hr class="solid">
+              <h3>Academy</h3>
+            </div>
+          </div>
         </article>
         <article>
           <a href="#"><img src="images/behandlinger.png" alt="#"></a>
-          <button class="btn1">Academy</button>
-        </article>
-        <article>
-          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
-          <button class="btn1">Om os</button>
+          <div class="boks3">
+            <div class="bokstekst">
+              <h4>Se vores</h4>
+              <hr class="solid">
+              <h3>Om os</h3>
+            </div>
+          </div>
         </article>
       </section>
     </main>
