--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <article>
           <a href="#"><img src="images/behandlinger.png" alt="#"></a>
           <div class="boks1">
-            <a href="#"><div class="bokstekst"></a>
+            <div class="bokstekst">
               <h4>Se vores</h4>
               <hr class="solid">
               <h3>Behandlinger</h3>
@@ -47,14 +47,31 @@
           </div>
         </article>
         <article>
-          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
+          <a href="#"><img src="images/omos.png" alt="#"></a>
           <div class="boks3">
             <div class="bokstekst">
-              <h4>Se vores</h4>
+              <h4>Læs mere</h4>
               <hr class="solid">
               <h3>Om os</h3>
             </div>
           </div>
+        </article>
+      </section>
+
+      <section>
+        <article class="shop">
+          <img src="images/shop.png" alt="Parfumer og cremer">
+          <h4>Produkter</h4>
+          <p>Se vores nyeste produkter indenfor hudpleje, hår eller negle. </p>
+          <button class="btn2">Shop</button>
+        </article>
+      </section>
+
+      <section>
+        <article class="inspiration">
+          <h2>Se vores arbejde</h2>
+          <p>@beautystar</p>
+
         </article>
       </section>
     </main>
