--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
       <section>
         <article class="inspiration">
           <h2>Se vores arbejde</h2>
-          <p>@beautystar</p>
-
+           <figure class=inspirationgalleri>
+             <img src="images/inspiration1.png" alt="#">
+             <img src="images/inspiration.png" alt="#">
+             <img src="images/inspiration.png" alt="#">
+             <img src="images/inspiration.png" alt="#">
+             <a href="#">@beautystar</a>
+           </figure>
         </article>
       </section>
     </main>
