--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
 
     <main>
+      <!--GAMLE
       <section id="kategorier">
         <article>
           <a href="#"><img src="images/behandlinger.png" alt="#"></a>
@@ -57,6 +58,39 @@
           </div>
         </article>
       </section>
+    -->
+
+      <!--nye kategorier-->
+      <section id="kategorier">
+        <article>
+          <div class="behandlinger">
+            <div class="boks">
+              <h4>Se vores</h4>
+              <hr class="solid">
+              <h3>Behandlinger</h3>
+            </div>
+          </div>
+        </article>
+        <article>
+          <div class="academy">
+            <div class="boks">
+              <h4>Se vores</h4>
+              <hr class="solid">
+              <h3>Academy</h3>
+            </div>
+          </div>
+        </article>
+        <article>
+          <div class="omos">
+            <div class="boks">
+              <h4>Læs mere</h4>
+              <hr class="solid">
+              <h3>Om os</h3>
+            </div>
+          </div>
+        </article>
+      </section>
+
 
       <section>
         <article class="shop">
