--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         <article class="inspiration">
           <h2>Se vores arbejde</h2>
            <figure class=inspirationgalleri>
-             <img src="images/inspiration1.png" alt="#">
-             <img src="images/inspiration.png" alt="#">
-             <img src="images/inspiration.png" alt="#">
-             <img src="images/inspiration.png" alt="#">
+             <img src="images/inspiration1.png" alt="Negle med marineblå og beige neglelak">
+             <img src="images/inspiration2.png" alt="Spejlselfie med marineblå og beige neglelak">
+             <img src="images/inspiration3.png" alt="Fransk manicure i forskellige pastel farver">
+             <img src="images/inspiration4.png" alt="Outfit med negleelak som fransk manicure i forskellige pastel farver">
              <a href="#">@beautystar</a>
            </figure>
         </article>
