--- a/index.html
+++ b/index.html
@@ -25,40 +25,6 @@
     </header>
 
     <main>
-      <!--GAMLE
-      <section id="kategorier">
-        <article>
-          <a href="#"><img src="images/behandlinger.png" alt="#"></a>
-          <div class="boks1">
-            <div class="bokstekst">
-              <h4>Se vores</h4>
-              <hr class="solid">
-              <h3>Behandlinger</h3>
-            </div>
-          </div>
-        </article>
-        <article>
-          <a href="#"><img src="images/academy.png" alt="#"></a>
-          <div class="boks2">
-            <div class="bokstekst">
-              <h4>Se vores</h4>
-              <hr class="solid">
-              <h3>Academy</h3>
-            </div>
-          </div>
-        </article>
-        <article>
-          <a href="#"><img src="images/omos.png" alt="#"></a>
-          <div class="boks3">
-            <div class="bokstekst">
-              <h4>Læs mere</h4>
-              <hr class="solid">
-              <h3>Om os</h3>
-            </div>
-          </div>
-        </article>
-      </section>
-    -->
 
       <!--nye kategorier-->
       <section id="kategorier">
@@ -116,7 +82,73 @@
     </main>
 
     <footer>
-        Copyright 2021. Alle rettigheder forbeholdes.
+      <!--Footer" -->
+<div class="row">
+    <article class="column">
+      <br>ÅBNINGSTIDER
+       <br>
+        <br> Man-Ons: 10 - 17
+        <br>Tors-Fre: 10 - 18
+        <br> Lørdag: 10 - 13
+        <br> Søndag: lukket
+  </article>
+
+       <article class="column">
+          <br>FIND OS
+          <div class"googlemap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <br>Tordensskjoldsgade 71,
+          <br>Trøjborg 8200 Aarhus
+  </article>
+
+      <article class="column">
+        <br>KONTAKT
+        <br>
+        <br>+4552648913
+        <br>info@beautystars.dk
+        <br>Book Online
+ </article>
+  </div>
+
+<div class="footer">
+  <br>
+  <br>
+  <div id="ikoner">
+
+      <img src="images/ikon.png" alt="ikoner" style="max-width: 600px; max-height: 600px;">
+      </div>
+    <br>ÅBNINGSTIDER
+     <br>
+      <br> Man-Ons: 10 - 17
+      <br>Tors-Fre: 10 - 18
+      <br> Lørdag: 10 - 13
+      <br> Søndag: lukket
+      <br>
+      <br>
+      <br>FIND OS
+      <br>
+      <br>
+
+        <div class"googlemap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      <br>
+      <br>Tordensskjoldsgade 71,
+      <br>Trøjborg 8200 Aarhus
+      <br>
+      <br>
+      <br>KONTAKT
+      <br>+4552648913
+      <br>info@beautystars.dk
+      <br>Book Online
+      <br>
+      <br>
+    </div>
+
+    <!-- typisk kontaktinformationer -->
+    <copyright>
+      &copy; Copyright 2021, Alle rettigheder forbeholdes.
+    </copyright>
     </footer>
   </div><!-- /wrap -->
 </body>
