--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div id="wrap">
 
     <header>
-      <img src="images/header.png" alt="#" style="width: 100%; height: auto;">
-      <h2> Vi tilbyder et stort udvalg af forskellige behandlinger </h2>
+      <img class="header" src="images/header.png" alt="#" style="width: 100%; height: auto;">
+      <img class="headercom" src="images/headercom.jpg" alt="#" style="width: 100%; height: auto;">
       <button class="btn">Book tid</button>
       <h1> Velkommen til Beauty Star! </h1>
       <p>Hos Beauty Star skøndhedsklinik kan du som kunde, altid nyde en rolig stemning, væk fra dagligdagens larm, hvor du er i centrum.</p>
@@ -59,7 +59,8 @@
 
       <section>
         <article class="shop">
-          <img src="images/shop.png" alt="Parfumer og cremer">
+          <img class="shopbillede" src="images/shop.png" alt="Parfumer og cremer">
+          <img class="shopcom" src="images/shopcom.jpg" alt="Parfumer og cremer">
           <h4>Produkter</h4>
           <p>Se vores nyeste produkter indenfor hudpleje, hår eller negle. </p>
           <button class="btn2">Shop</button>
