--- a/index.html
+++ b/index.html
@@ -14,11 +14,65 @@
 </head>
 
 <body>
-  <div id="wrap">
+
+<!-- navigationsbar -->
+<nav id="navigation">
+  <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
+
+    <div class="burgermenu">
+    <span id="showmenu">☰</span>
+    </div>
+
+    <div class="dropdown">
+    <button class="dropbtn">Behandlinger</button>
+    <div class="dropdown-content">
+      <a href="#">Begynder guide</a>
+      <a href="#">Fototeknikker</a>
+      <a href="#">Instagram tips</a>
+      <a href="#">Kamera indstillinger</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Booking</button>
+    <div class="dropdown-content">
+      <a href="#">Bedre mobilfotos</a>
+      <a href="#">Lav selv presets</a>
+      <a href="#">Foto apps</a>
+      <a href="#">Mobil udstyr</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Shop</button>
+    <div class="dropdown-content">
+      <a href="#">Photoshop</a>
+      <a href="#">Lightroom</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Academy</button>
+    <div class="dropdown-content">
+      <a href="#">Nyheder</a>
+      <a href="#">Kameraer</a>
+      <a href="#">Fotoudstyr</a>
+      <a href="#">Prisvenligt</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Om os</button>
+    <div class="dropdown-content">
+      <a href="#">Portræt</a>
+      <a href="#">Event</a>
+      <a href="#">Produkt</a>
+      <a href="#">Natur</a>
+      <a href="#">Action</a>
+    </div>
+  </div>
+</nav>
 
     <header>
       <img class="header" src="images/header.png" alt="#" style="width: 100%; height: auto;">
       <img class="headercom" src="images/headercom.jpg" alt="#" style="width: 100%; height: auto;">
+      <h2> Vi tilbyder 23 behandlinger </h2>
       <button class="btn">Book tid</button>
       <h1> Velkommen til Beauty Star! </h1>
       <p>Hos Beauty Star skøndhedsklinik kan du som kunde, altid nyde en rolig stemning, væk fra dagligdagens larm, hvor du er i centrum.</p>
