--- a/index.html
+++ b/index.html
@@ -26,46 +26,34 @@
     <div class="dropdown">
     <button class="dropbtn">Behandlinger</button>
     <div class="dropdown-content">
-      <a href="#">Begynder guide</a>
-      <a href="#">Fototeknikker</a>
-      <a href="#">Instagram tips</a>
-      <a href="#">Kamera indstillinger</a>
+      <a href="#">Ansigtsbehandling</a>
+      <a href="#">Vipper & bryn</a>
+      <a href="#">Negle</a>
+      <a href="#">Spraytan</a>
+      <a href="#">Voksbehandling</a>
     </div>
   </div>
   <div class="dropdown">
     <button class="dropbtn">Booking</button>
     <div class="dropdown-content">
-      <a href="#">Bedre mobilfotos</a>
-      <a href="#">Lav selv presets</a>
-      <a href="#">Foto apps</a>
-      <a href="#">Mobil udstyr</a>
+      <a href="#">Prisliste</a>
     </div>
   </div>
   <div class="dropdown">
     <button class="dropbtn">Shop</button>
     <div class="dropdown-content">
-      <a href="#">Photoshop</a>
-      <a href="#">Lightroom</a>
+      <a href="#">Produkter</a>
+      <a href="#">Gavekort</a>
     </div>
   </div>
   <div class="dropdown">
     <button class="dropbtn">Academy</button>
     <div class="dropdown-content">
-      <a href="#">Nyheder</a>
-      <a href="#">Kameraer</a>
-      <a href="#">Fotoudstyr</a>
-      <a href="#">Prisvenligt</a>
+      <a href="#">Kursus profil</a>
     </div>
   </div>
   <div class="dropdown">
     <button class="dropbtn">Om os</button>
-    <div class="dropdown-content">
-      <a href="#">Portræt</a>
-      <a href="#">Event</a>
-      <a href="#">Produkt</a>
-      <a href="#">Natur</a>
-      <a href="#">Action</a>
-    </div>
   </div>
 </nav>
 
