--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="#">
+  <meta name="author" content="Karoline Aaby">
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
   <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<div id="wrap">
 <!-- navigationsbar -->
 <nav id="navigation">
   <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
