--- a/behandling.html
+++ b/behandling.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="#">
+  <meta name="author" content="Katrine Æbelø">
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
-  <link rel="stylesheet" href="css/booking.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="#" />
 </head>
@@ -17,47 +17,47 @@
 <body>
     <div id="wrap">
 
-  <!-- navigationsbar -->
-  <nav id="navigation">
-    <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
+      <!-- navigationsbar -->
+      <nav id="navigation">
+        <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
 
-      <div class="burgermenu">
-      <span id="showmenu">☰</span>
-      </div>
+          <div class="burgermenu">
+          <span id="showmenu">☰</span>
+          </div>
 
-      <div class="dropdown">
-      <button class="dropbtn">Behandlinger</button>
-      <div class="dropdown-content">
-        <a href="#">Ansigtsbehandling</a>
-        <a href="#">Vipper & bryn</a>
-        <a href="#">Negle</a>
-        <a href="#">Spraytan</a>
-        <a href="#">Voksbehandling</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Booking</button>
-      <div class="dropdown-content">
-        <a href="#">Prisliste</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Shop</button>
-      <div class="dropdown-content">
-        <a href="#">Produkter</a>
-        <a href="#">Gavekort</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Academy</button>
-      <div class="dropdown-content">
-        <a href="#">Kursus profil</a>
-      </div>
-    </div>
-    <div class="dropdown">
-      <button class="dropbtn">Om os</button>
-    </div>
-  </nav>
+          <div class="dropdown">
+          <a href="behandling.html" class="dropbtn">Behandlinger</a>
+          <div class="dropdown-content">
+            <a href="#">Ansigtsbehandling</a>
+            <a href="#">Vipper & bryn</a>
+            <a href="#">Negle</a>
+            <a href="#">Spraytan</a>
+            <a href="#">Voksbehandling</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="booking.html" class="dropbtn">Booking</a>
+          <div class="dropdown-content">
+            <a href="#">Prisliste</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="#" class="dropbtn">Shop</a>
+          <div class="dropdown-content">
+            <a href="#">Produkter</a>
+            <a href="#">Gavekort</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="#" class="dropbtn">Academy</a>
+          <div class="dropdown-content">
+            <a href="#">Kursus profil</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="#" class="dropbtn">Om os</a>
+        </div>
+      </nav>
 
   <header>
        <!--forside billede-->
