--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="dropdown">
-    <button class="dropbtn">Behandlinger</button>
+    <a href="behandling.html" class="dropbtn">Behandlinger</a>
     <div class="dropdown-content">
       <a href="#">Ansigtsbehandling</a>
       <a href="#">Vipper & bryn</a>
@@ -34,30 +34,30 @@
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Booking</button>
+    <a href="booking.html" class="dropbtn">Booking</a>
     <div class="dropdown-content">
       <a href="#">Prisliste</a>
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Shop</button>
+    <a href="#" class="dropbtn">Shop</a>
     <div class="dropdown-content">
       <a href="#">Produkter</a>
       <a href="#">Gavekort</a>
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Academy</button>
+    <a href="#" class="dropbtn">Academy</a>
     <div class="dropdown-content">
       <a href="#">Kursus profil</a>
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Om os</button>
+    <a href="#" class="dropbtn">Om os</a>
   </div>
 </nav>
 
-    <header>
+    <header class="headerforside">
       <img class="header" src="images/header.png" alt="#" style="width: 100%; height: auto;">
       <img class="headercom" src="images/headercom.jpg" alt="#" style="width: 100%; height: auto;">
       <h2> Vi tilbyder 23 behandlinger </h2>
@@ -102,7 +102,7 @@
       <section>
         <article class="shop">
           <img class="shopbillede" src="images/shop.png" alt="Parfumer og cremer">
-          <img class="shopcom" src="images/shopcom.jpg" alt="Parfumer og cremer">
+          <img class="shopcom" src="images/shopcom2.png" alt="Parfumer og cremer">
           <h4>Produkter</h4>
           <p>Se vores nyeste produkter indenfor hudpleje, hår eller negle. </p>
           <button class="btn2">Shop</button>
