--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="dropdown">
-    <a href="#" class="dropbtn">Om os</a>
+    <a href="omos.html" class="dropbtn">Om os</a>
   </div>
 </nav>
 
