--- a/omos.html
+++ b/omos.html
@@ -75,84 +75,74 @@
 
 
   <!--Footer-->
-
 <footer>
-
-    <!--Footer til web-->
- <div class="row">
-      <article class="column">
-        <br>ÅBNINGSTIDER
-         <br>
-          <br> Man-Ons: 10 - 17
-          <br>Tors-Fre: 10 - 18
-          <br> Lørdag: 10 - 13
-          <br> Søndag: lukket
-    </article>
-
-         <article class="column">
-            <br>FIND OS
-            <div class="googlemap">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <br>Tordensskjoldsgade 71,
-            <br>Trøjborg 8200 Aarhus
-    </article>
-
-        <article class="column">
-          <br>KONTAKT
-          <br>
-          <br>+4552648913
-          <br>info@beautystars.dk
-          <br>Book Online
-   </article>
-    </div>
-
-      <!--Footer til mobil-->
-  <div class="footer">
-    <br>
-    <br>
-    <div id="ikoner">
-
-        <img src="images/ikon.png" alt="ikoner" style="max-width: 200px; max-height: 100px;">
-        </div>
-
+  <div class="ikoner">
+      <img src="images/ikon.png" alt="ikoner" style="max-width: 200px; max-height: 100px;">
+      </div>
+  <!--Footer til web-->
+<div class="row">
+    <article class="column">
       <br>ÅBNINGSTIDER
        <br>
         <br> Man-Ons: 10 - 17
         <br>Tors-Fre: 10 - 18
         <br> Lørdag: 10 - 13
         <br> Søndag: lukket
-        <br>
-        <br>
-        <br>FIND OS
-        <br>
-        <br>
+  </article>
 
+       <article class="column">
+          <br>FIND OS
           <div class="googlemap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+          <br>Tordensskjoldsgade 71,
+          <br>Trøjborg 8200 Aarhus
+  </article>
 
-        <br>
-        <br>Tordensskjoldsgade 71,
-        <br>Trøjborg 8200 Aarhus
-        <br>
-        <br>
+      <article class="column">
         <br>KONTAKT
-        <br>+4552648913
+        <br>
+        <br>+45 52 64 89 13
         <br>info@beautystars.dk
-        <br>Book Online
-        <br>
-        <br>
-      </div>
-      </div>
+        <br><a href="booking.html">Book Online</a>
+ </article>
+  </div>
 
-    </footer>
-  </div><!-- /wrap -->
+    <!--Footer til mobil-->
+<div class="footer">
+    <br>ÅBNINGSTIDER
+     <br>
+      <br> Man-Ons: 10 - 17
+      <br>Tors-Fre: 10 - 18
+      <br> Lørdag: 10 - 13
+      <br> Søndag: lukket
+      <br>
+      <br>
+      <br>FIND OS
+      <br>
+      <br>
 
-  <!-- typisk kontaktinformationer -->
-  <div class="copyright">
-  <p id=copyright> &copy; Copyright 2021, Alle rettigheder forbeholdes.</p>
+        <div class="googlemap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+      <br>
+      <br>Tordensskjoldsgade 71,
+      <br>Trøjborg 8200 Aarhus
+      <br>
+      <br>
+      <br>KONTAKT
+      <br>+45 52 64 89 13
+      <br>info@beautystars.dk
+      <br><a href="booking.html">Book Online</a>
+      <br>
+      <br>
+    </div>
     </div>
 
+      <div class="copyright">
+      <p id=copyright> &copy; Copyright 2021, Alle rettigheder forbeholdes.</p>
+        </div>
+</footer>
+  </div><!-- /wrap -->
 </body>
-
 </html>
