--- a/behandling.html
+++ b/behandling.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Katrine Æbelø">
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/booking.css">
   <!-- favicon = ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="#" />
 </head>
