--- a/omos.html
+++ b/omos.html
@@ -8,36 +8,57 @@
   <meta name="author" content="#">
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
-  <link rel="stylesheet" href="css/omos.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="#" />
-
-
 </head>
 
 <body>
-<nav class="navbar">
-  <img src="images/logo.png" alt="#" style="width: 120px; height:50px;">
+    <div id="wrap">
+  <!-- navigationsbar -->
+  <nav id="navigation">
+    <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
 
-  <div class="burgermenu">
-    <span id="showmenu">☰</span>
+      <div class="burgermenu">
+      <span id="showmenu">☰</span>
+      </div>
+
+      <div class="dropdown">
+      <a href="behandling.html" class="dropbtn">Behandlinger</a>
+      <div class="dropdown-content">
+        <a href="#">Ansigtsbehandling</a>
+        <a href="#">Vipper & bryn</a>
+        <a href="#">Negle</a>
+        <a href="#">Spraytan</a>
+        <a href="#">Voksbehandling</a>
+      </div>
     </div>
+    <div class="dropdown">
+      <a href="booking.html" class="dropbtn">Booking</a>
+      <div class="dropdown-content">
+        <a href="#">Prisliste</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <a href="#" class="dropbtn">Shop</a>
+      <div class="dropdown-content">
+        <a href="#">Produkter</a>
+        <a href="#">Gavekort</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <a href="#" class="dropbtn">Academy</a>
+      <div class="dropdown-content">
+        <a href="#">Kursus profil</a>
+      </div>
+    </div>
+    <div class="dropdown">
+      <a href="omos.html" class="dropbtn">Om os</a>
+    </div>
+  </nav>
 
-  <div class="navbar-links">
-    <ul>
-      <li><a href="#">Behandlinger</a></li>
-      <li><a href="#">Booking</a></li>
-      <li><a href="#">Shop</a></li>
-      <li><a href="#">Academy</a></li>
-      <li><a href="#">Om os</a></li>
-    </ul>
-  </div>
-</nav>
-
-  <div id="wrap">
-
-  <div class="omos">
-  <h1> Om os</h1>
+  <div class="omosunderside">
+  <h1 class=omosoverskrifter> Om os</h1>
   <p class=infop> Hos Beauty Star Skønhedsklinkik finder du et team af erfarne og veluddannede behandlere med fokus på gode resultater i hver behandling </p>
   <p class=infop>I klinikken står vi altid klar med te og snacks til at give dig en hyggelig oplevelse</p>
   </div>
@@ -68,7 +89,7 @@
 </section>
 
 <div class="parkering">
-  <h1 >Parkering</h1>
+  <h1 class=omosoverskrifter>Parkering</h1>
   <p class=infop>Der er 1 times parkering udenfor klinikken med p-skive og 2 timers parkering i sidegaderne med parkeringsapp</p>
   <p class=infop>Ring gerne til klinikken ved andre spørgsmål</p>
 </div>
@@ -123,7 +144,7 @@
       <br>
 
         <div class="googlemap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="375" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
       <br>
       <br>Tordensskjoldsgade 71,
