--- a/behandling.html
+++ b/behandling.html
@@ -21,9 +21,12 @@
       <nav id="navigation">
         <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
 
-          <div class="burgermenu">
-          <span id="showmenu">☰</span>
-          </div>
+        <!-- Burgermenu -->
+            <div class="burgermenu">
+            <div id="showMenu">
+              <a href="mob-menu.html">☰</a>
+            </div>
+            </div>
 
           <div class="dropdown">
           <a href="behandling.html" class="dropbtn">Behandlinger</a>
