--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <nav id="navigation">
   <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
 
+<!-- Burgermenu -->
     <div class="burgermenu">
-    <span id="showmenu">☰</span>
+    <div id="showMenu">
+      <a href="mob-menu.html">☰</a>
+    </div>
     </div>
 
     <div class="dropdown">
@@ -171,7 +174,7 @@
           <br>
 
             <div class="googlemap">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="375" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
           <br>
           <br>Tordensskjoldsgade 71,
