--- a/behandling.html
+++ b/behandling.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Katrine Æbelø">
   <meta name="keywords" content="#">
 	<meta name="description" content="#">
-  <link rel="stylesheet" href="css/booking.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="#" />
 </head>
@@ -21,12 +21,12 @@
       <nav id="navigation">
         <a href="index.html"><img src="images/logo.png" alt="Beauty Star logo" style="width: 120px; height:50px;"></a>
 
-        <!-- Burgermenu -->
-            <div class="burgermenu">
-            <div id="showMenu">
-              <a href="mob-menu.html">☰</a>
-            </div>
-            </div>
+      <!-- Burgermenu -->
+          <div class="burgermenu">
+          <div id="showMenu">
+            <a href="mob-menu.html">☰</a>
+          </div>
+          </div>
 
           <div class="dropdown">
           <a href="behandling.html" class="dropbtn">Behandlinger</a>
@@ -71,7 +71,7 @@
 
   <main>
      <!--introduktion-->
-     <h1>BEHANDLINGER</h1>
+     <h2 class="behandlingeroverskrift">BEHANDLINGER</h2>
 
      <!-- flexbox til artikler med knap (mobil devices) -->
        <section class="butikflex">
@@ -79,60 +79,64 @@
          <article class="container1">
            <img src="images/tan.jpg" alt="spraytan" class="center">
            <div class="text-block">
-           <h4> Spraytan </h4>
+             <button class="btnbehandling">Spraytan</button>
          </div>
        </article>
 
          <article class="container1">
            <img src="images/Negle.jpg" alt="Negle" class="center">
            <div class="text-block">
-           <h4>Negle</h4>
+           <button class="btnbehandling">Negle</button>
          </div>
        </article>
 
          <article class="container1">
            <img src="images/Voks.jpg" alt="voksbehandling" class="center">
            <div class="text-block">
-           <h4> Voksbehandlinger </h4>
+          <button class="btnbehandling">Voksbehandlinger</button>
          </div>
        </article>
 
        <article class="container1">
          <img src="images/ansigt.jpg" alt="ansigtsbehandling" class="center">
          <div class="text-block">
-          <h4> Ansigtsbehandling</h4>
+           <button class="btnbehandling">Ansigtsbehandling</button>
         </div>
       </article>
 
      <article class="container1">
        <img src="images/Bryn.jpg" alt="bryn" class="center">
        <div class="text-block">
-       <h4> Bryn og vipper</h4>
+         <button class="btnbehandling">Bryn og vipper</button>
      </div>
    </article>
  </section>
 
 </div>
 
-      <section>
-        <article class="inspiration">
-           <figure class=inspirationgalleri>
+      <section class="behandlinger">
+        <article>
+           <figure class=behandlingerweb>
              <img src="images/tan.jpg" alt="spraytan">
+
              <img src="images/Negle.jpg" alt="neglelak">
+
              <img src="images/ansigt.jpg" alt="ansigtsbehandling">
+
              <img src="images/Voks.jpg" alt="voksbehandling">
+
             <img src="images/Bryn.jpg" alt="Bryn og vipper">
-             <a href="#">@beautystar</a>
            </figure>
         </article>
       </section>
   </main>
+
   <footer>
     <div class="ikoner">
         <img src="images/ikon.png" alt="ikoner" style="max-width: 200px; max-height: 100px;">
         </div>
     <!--Footer til web-->
-  <div class="row">
+ <div class="row">
       <article class="column">
         <br>ÅBNINGSTIDER
          <br>
@@ -175,7 +179,7 @@
         <br>
 
           <div class="googlemap">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="380" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.0785218238107!2d10.214297715878326!3d56.173035466969736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c6cc5a48bd2d7%3A0xed6d9e19f78b1fb5!2sBeauty%20Star%20Sk%C3%B8nhedsklinik!5e0!3m2!1sda!2sdk!4v1637054850236!5m2!1sda!2sdk" width="375" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
         <br>
         <br>Tordensskjoldsgade 71,
@@ -195,6 +199,6 @@
         <p id=copyright> &copy; Copyright 2021, Alle rettigheder forbeholdes.</p>
           </div>
   </footer>
-  </div><!-- wrapper -->
-</body>
-</html>
+  </div><!-- /wrap -->
+  </body>
+  </html>
