--- a/behandling.html
+++ b/behandling.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Katrine Æbelø">
-  <meta name="keywords" content="#">
-	<meta name="description" content="#">
+  <meta name="author" content="Karoline Aaby, Katrine Æbelø, Michella Carstens & Annica Laursen">
+  <meta name="keywords" content="beauty behandlinger, ansigtsbehandling, voksbehandling, negle, gelnegle, lashlift, browlift, farvning af bryn, farvning af vipper">
+	<meta name="description" content="Hos beauty star tilbyder vi et stort udvalg af forskellige behandlinger, lige til dit behov. Vi tilbyder lige fra voksbehandlinger til øjenbryn, vipper og negle.">
   <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
-	<link rel="icon" type="image/x-icon" href="#" />
+	<link rel="icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 
@@ -65,7 +65,7 @@
   <header>
        <!--forside billede-->
          <article class="forsidebillede">
-           <img src="images/behandlinger.jpg" alt="#"style="max-width:100%;max-height:auto;">
+           <img src="images/behandlinger.jpg" alt="beauty setup, med håndklæde lys og duftepinde" style="max-width:100%;">
        </article>
   </header>
 
@@ -111,20 +111,13 @@
      </div>
    </article>
  </section>
-
-</div>
-
-      <section class="behandlinger">
+      <section>
         <article>
            <figure class=behandlingerweb>
              <img src="images/tan.jpg" alt="spraytan">
-
              <img src="images/Negle.jpg" alt="neglelak">
-
              <img src="images/ansigt.jpg" alt="ansigtsbehandling">
-
              <img src="images/Voks.jpg" alt="voksbehandling">
-
             <img src="images/Bryn.jpg" alt="Bryn og vipper">
            </figure>
         </article>
