--- a/booking.html
+++ b/booking.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Booking</title>
-  <meta name="author" content="#">
-  <meta name="keywords" content="Michella Carstens">
-  <meta name="description" content="#">
+  <meta name="author" content="Karoline Aaby, Katrine Æbelø, Michella Carstens & Annica Laursen">
+  <meta name="keywords" content="book tid, beauty star booking, beauty star book tid, booking negle, booking bryn, booking krop, booking voksbehandling">
+  <meta name="description" content="Kunne du tænke dig din næste behandling hos Beauty Star, så kan du booke din tid her til alt fra negle og bryn til voksbehandling.">
   <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
-  <link rel="icon" type="image/x-icon" href="#" />
+  <link rel="icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 <body>
