--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Karoline Aaby">
-  <meta name="keywords" content="#">
-	<meta name="description" content="#">
+  <meta name="author" content="Karoline Aaby, Katrine Æbelø, Michella Carstens & Annica Laursen">
+  <meta name="keywords" content="Beauty Star, Skønhedsklinik, Beauty academy, skønhedsbehandliner, beauty star behandlinger, skønhedsklinik Aarhus, skønhedsklinik Trøjborg">
+	<meta name="description" content="Beauty Star er en skønhedsklinik i hjertet af Trøjborg. Vi tilbyder en bred variation af forskellige behandlinger, hvor om kunde kan du altid nyde en rolig stemning, væk fra dagligdagens larm, hvor du er i centrum.">
   <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
-	<link rel="icon" type="image/x-icon" href="#" />
+	<link rel="icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 <body>
@@ -61,8 +61,8 @@
 </nav>
 
     <header class="headerforside">
-      <img class="header" src="images/header.png" alt="#" style="width: 100%; height: auto;">
-      <img class="headercom" src="images/headercom.jpg" alt="#" style="width: 100%; height: auto;">
+      <img class="header" src="images/header.png" alt="beauty setup, med håndklæde lys og duftepinde" style="width: 100%; height: auto;">
+      <img class="headercom" src="images/headercom.jpg" alt="beauty setup, med håndklæde lys og duftepinde" style="width: 100%; height: auto;">
       <h2> Vi tilbyder 23 behandlinger </h2>
       <button class="btn">Book tid</button>
       <h1> Velkommen til Beauty Star! </h1>
@@ -77,7 +77,7 @@
             <div class="boks">
               <h4>Se vores</h4>
               <hr class="solid">
-              <h3>Behandlinger</h3>
+              <a href="behandling.html"><h3>Behandlinger</h3></a>
             </div>
           </div>
         </article>
@@ -86,7 +86,7 @@
             <div class="boks">
               <h4>Se vores</h4>
               <hr class="solid">
-              <h3>Academy</h3>
+              <a href="#"><h3>Academy</h3></a>
             </div>
           </div>
         </article>
@@ -95,7 +95,7 @@
             <div class="boks">
               <h4>Læs mere</h4>
               <hr class="solid">
-              <h3>Om os</h3>
+              <a href="omos.html"><h3>Om os</h3></a>
             </div>
           </div>
         </article>
