--- a/omos.html
+++ b/omos.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="#">
-  <meta name="keywords" content="#">
-	<meta name="description" content="#">
+  <meta name="author" content="Karoline Aaby, Katrine Æbelø, Michella Carstens & Annica Laursen">
+  <meta name="keywords" content="Om os, om beauty star, info, susu, katrin, parkering, erfaring, beauty star erfaring">
+	<meta name="description" content="Hos Beauty Star Skønhedsklinkik finder du et team af erfarne og veluddannede behandlere med fokus på gode resultater i hver behandling. Vores to behandlere hedder Susu og Katrin.">
   <link rel="stylesheet" href="css/style.css">
   <!-- favicon = ikon i faneblad / browser -->
-	<link rel="icon" type="image/x-icon" href="#" />
+	<link rel="icon" type="image/x-icon" href="images/favicon.png" />
 </head>
 
 <body>
