--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <img class="header" src="images/header.png" alt="beauty setup, med håndklæde lys og duftepinde" style="width: 100%; height: auto;">
       <img class="headercom" src="images/headercom.jpg" alt="beauty setup, med håndklæde lys og duftepinde" style="width: 100%; height: auto;">
       <h2> Book din næste behandling </h2>
-      <button class="btn">Book tid</button>
+      <a href="booking.html"><button class="btn">Book tid</button></a>
       <h1> Velkommen til Beauty Star! </h1>
       <p>Hos Beauty Star skøndhedsklinik kan du som kunde, altid nyde en rolig stemning, væk fra dagligdagens larm, hvor du er i centrum.</p>
     </header>
