--- a/index.html
+++ b/index.html
@@ -101,11 +101,10 @@
         </article>
       </section>
 
-
       <section>
         <article class="shop">
           <img class="shopbillede" src="images/shop.png" alt="Parfumer og cremer">
-          <img class="shopcom" src="images/shopcom2.png" alt="Parfumer og cremer">
+          <img class="shopcom" src="images/shopcom.png" alt="Parfumer og cremer">
           <h4>Produkter</h4>
           <p>Se vores nyeste produkter indenfor hudpleje, hår eller negle. </p>
           <div class="text-blockforside"><button class="btn2">Shop</button></div>
