--- a/omos.html
+++ b/omos.html
@@ -95,6 +95,7 @@
   <h1 class=omosoverskrifter>Parkering</h1>
   <p class=infop>Der er 1 times parkering udenfor klinikken med p-skive og 2 timers parkering i sidegaderne med parkeringsapp</p>
   <p class=infop>Ring gerne til klinikken ved andre spørgsmål</p>
+  <p class=infop>+45 52 64 89 13</p>
 </div>
 
 
